fixed alignment of content

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
 
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 img {
@@ -13,9 +13,14 @@ img {
 }
 
 .page-container {
-  margin: 2rem 0;
+  margin: 2rem auto;
 }
 
 .section {
   margin-top: 1.5rem;
+}
+
+a,
+a:hover {
+  color: inherit;
 }
